--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,9 @@
     background-color: red;
     color: white;
     border: 1px solid blue;
-  border-radius: 10px;
+    border-radius: 10px;
+    margin-left: 60%;
+  
 }
 
 .palert {
