--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,8 @@
     color: white;
     border: 1px solid blue;
     border-radius: 10px;
-    margin-left: 60%;
-  
+    margin-left: 50%;
+    padding: 5px;
 }
 
 .palert {
