--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
     border: 2px solid blue;
     border-radius: 10px;
     margin-left: 45%;
-    margin-top: 40px;
+    margin-top: 40%;
     padding: 5px;
 }
 
