--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@
     margin-left: 45%;
     margin-top: 40%;
     padding: 5px;
+    font-size:20px;
 }
 
                                                 /* SMALL SIZED DEVICES */
