--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,11 @@
     border: 2px solid blue;
     border-radius: 10px;
     margin-left: 45%;
-    margin-top: 40%;
+    margin-top: 10%;
     padding: 5px;
     font-size:20px;
+    position: fixed;
+    bottom: 15px;
 }
 
                                                 /* SMALL SIZED DEVICES */
