--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
 .alertbutton {
     background-color: red;
     color: white;
-    border: 2px solid blue;
+    border: 2px solid yellow;
     border-radius: 10px;
     margin-left: 45%;
     margin-top: 10%;
