--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
     padding: 5px;
     font-size:20px;
     position: fixed;
-    bottom: 0px;
+    right: 0px;
 }
 
                                                 /* SMALL SIZED DEVICES */
